style.css
/* for smaller mobile devices */

* {
  margin: 0;
  padding: 0;
}

.container {
  max-width: 1320px;
  margin: 0 auto;
}

.contact-header {
  width: 100%;
  background-color:#1a1819;
  color: #b6b4b5;
  height: 66px;
  font-family: 'Open Sans', sans-serif;
}

.contact-us-item {
  margin-top: 5px;
  padding: 0 5px;
  list-style: none;
  font-size: 12px;
  font-weight: bold;
}

.contact-us-item li {
  padding: 4px 0;
}

.text {
  position: relative;
  top: 2px;
  left: 4px;
}

.social-nav ul  {
  list-style: none;
  float: right;
  margin-top: 30px;  
}

.social-nav li  {
  display: inline;
  padding: 0 4px;
}

.navbar {
  margin: 0;
  padding: 0;
  height: 90px;
  background-color: white;
}

.navbar-brand { 
  margin: 0 auto;
  position: relative;
  left: 27px;
  top: 2px;
}

.navbar-toggler-icon { 
  height: 1.7em;
  position: relative;
  top: 3px;
  right: 4px;
  font-size: 22px;    
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(64,185,186)' stroke-width='4' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

#navbarNav {
  width: 100%;
  position: absolute;
  z-index: 1;
  top: 90px;
  left: 0px;
  padding: 0;
  margin: 0;
}

.nav-item { 
  height: 60px; 
  background-color: #40b9ba;
  text-align: center;  
}

.nav-link {  
  padding-top: 18px;
  font-size: 15px;
  letter-spacing: .2px;  
  color: white;
  font-family: 'Open Sans', sans-serif;
}

.nav-link:hover {
  height: 60px;
  color: black;
  background-color:#dcdedd;    
}

button:focus {  
  outline: none;
}

.banner {
  margin: 0;
  padding: 0;
  background-image: url(./assets/banner.jpg);
  background-size: cover;
  height: 196px;
  background-position: center center;   
}

.banner ul {
  list-style: none;
  position: relative;
  top: 80px;
  left: 10%;
  color: white;
}

.banner ul :first-child {
  font-size: 15px;
  font-weight: bolder;
  padding: 3px 25px 0px 4px;
  background-color: #40b9ba;
  width: max-content;
}

.banner ul :last-child {
  width: 220px;
  font-size: 14px;
  padding: 5px;
  background-color: rgba(26, 24, 25, .8);
}



.txt-col-1 {  
  margin-top: 10px;
  padding: 0 10px;
  font-family: 'Open Sans Condensed', sans-serif;
}

.txt-col-2 {  
  margin-top: 40px;
  padding: 0 10px;
  font-family: 'Open Sans Condensed', sans-serif;
}

.txt-col-h1 {
  font-size: 74px;  
  line-height: 1.1;
  color:black;
}

.txt-col-p {
  margin-top: 21px;
  line-height: 30px;
  padding-left: 5px;
  padding-right: 15px;
}

.cont-row {
  padding-top: 40px;
  margin: 0;
}

.img-pane {
  max-width: 100%;
  max-height: 100%;   
}


#textPane {
  margin-top: 50px;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
}


footer {
  font-family: 'Open Sans', sans-serif;
  background-color:  black;
  color:  white;
  text-align: center;
  line-height: 371%;
  width: 100%;
  font-size: 11px;
  height: 43px;
  font-weight: bold;
}

footer span {
  color: #40b9ba;
}

/* for large mobile devices or in landscape mode */

@media (min-width: 576px) {

  .banner ul {
    top: 80px;
    left: 30%;    
  }
  
  .cont-row {
    padding:  40px 15px;
  }
  
 .img-col {
    padding: 0 10px;
  }

  .txt-col-1 {  
    margin: 0px;
    padding-left: 15px;
    font-family: 'Open Sans Condensed', sans-serif;
    height: auto;
  }
  
  .txt-col-2 {  
    margin-top: 20px;

  }

  .txt-col-h1 {
    font-size: 50px;
    line-height: 55px;
    color:black;
  }
  
  .txt-col-p {
    line-height: 28px;
    font-size: 14px;
  }

  .img-pane {
    max-width: 100%;
    max-height: 100%;     
  }

}  


/* for tablet */

@media (min-width: 768px) {

    
  .contact-header {
    height: 22px;
  }

  .contact-us {
    padding-top:0px;
    padding-left: 15px;
  }

  .contact-us-item {
    font-size: 10px;
    font-weight: bold;
    margin: 0 ;
    padding-top: 2px;
  }

  .contact-us-item li {
    padding: 0 5px;
    display: inline;
  }

  .contact-img {
    height: 15px ;
  }

  .text {
    top: 1px;    
  }

  .social-nav ul {
    margin: 0;
  }

  .social-nav li {
    padding: 0 3px;
  }

  .social-nav-img {
    height: 22px;
    padding-bottom: 5px;
  }

  .navbar {
    height: 70px;
  }

  .navbar-brand {
    margin: 0;
    padding-bottom: 15px;
  }

  .navbar-logo {
    height: 21px;
    width: 105px;
  }

  #navbarNav {
    position: absolute;
    top: 0;
  }

  .nav-item {
    margin: 10px 20px ;   
    background-color: white;    
  }
  
  .nav-link {
    font-size: 13px;  
    font-weight: bold;
    color: black;
    font-family: 'Open Sans', sans-serif;
  }

  .nav-link:hover {
    background-color: white;
    height: 50px;
  }


  .banner ul {
    top: 80px;
    left: 80px;    
  }

  .cont-row {
    padding:  55px 25px 20px 30px;
  }

  .img-col {
    padding:0 40px;
  }
  
  .txt-col-1, .txt-col-2 {
    padding-left:40px;
  }
  
  .txt-col {
    padding: 0 32px;
  }

  .txt-col-h1 {
    font-size: 55px;
    line-height: 60px;
  }

  .txt-col-p {
    padding: 0;
  }

  .txt-col-2 {  
    margin-top: 35px;
  }

  #textPane {
    font-size: 13px;
  }
  
}

/* for laptop and large displays */

@media (min-width: 992px) {
  
  .contact-header {
    height: 27px;
  }

  .contact-us-item {
    font-size: 12px;
    font-weight: 600;
  }

  .contact-img {
    height: 20px ;
  }

  .social-nav-img {
    height: 25px;
  }


  .navbar {
    height: 90px;
  }

  .navbar-brand {
    left: 15px;
  }

  .navbar-logo {
    width: 100%;
    height: 100%;
  }

  .nav-item {  
    margin: 15px 32px ;   
    background-color: white;    
  }
  
  .nav-link {
    font-size: 15.4px;
    font-weight: bold;
    color: black;
    font-family: 'Open Sans', sans-serif;
  }

  .banner {
    height: 245px;
  }

  .banner ul {
    top: 95px;
    left: 110px;
  }

  .banner ul :first-child {
    font-size: 18px;
    font-weight: bolder;
    padding: 3px 30px 2px 4px;
    background-color: #40b9ba;
    width: max-content;
  }

  .banner ul :last-child {
    width: 257px;
    font-size: 16px;
    padding: 5px;
    line-height: 28px;
    background-color: rgba(26, 24, 25, .7);
  } 

  .txt-col-h1 {
    font-size: 75px;
    line-height: 85px;
  }

  .txt-col-p {
    font-size: 17px;
    
  }
  
  .txt-col-2 {
    margin-top: 50px;
  }

  #textPane {
    font-size: 16px;
  }  

  footer {
    padding: 26px 0;
    line-height: 20%;
  }
}

